--- a/datapod_engine/pubspec.yaml
+++ b/datapod_engine/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   datapod_core:
     path: ../datapod_core
   meta: ^1.11.0
+  logging: ^1.2.0
 
 dev_dependencies:
   lints: ^3.0.0
