--- a/datapod_example/pubspec.yaml
+++ b/datapod_example/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   datapod_engine:
     path: ../datapod_engine
   meta: ^1.11.0
+  logging: ^1.2.0
 
 dev_dependencies:
   build_runner: ^2.4.8
