--- a/datapod_mysql/pubspec.yaml
+++ b/datapod_mysql/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     path: ../datapod_engine
   mysql1: ^0.20.0
   meta: ^1.11.0
+  logging: ^1.2.0
 
 dev_dependencies:
   lints: ^3.0.0
