--- a/datapod_sqlite/pubspec.yaml
+++ b/datapod_sqlite/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     path: ../datapod_engine
   sqlite3: ^2.3.0
   meta: ^1.11.0
+  logging: ^1.2.0
 
 dev_dependencies:
   lints: ^3.0.0
