--- a/datapod_example/databases.yaml
+++ b/datapod_example/databases.yaml
@@ -1,3 +1,7 @@
 databases:
-  - name: datapod
-    plugin: datapod_postgres
+  - name: postgres_db
+    plugin: datapod_sqlite
+  - name: mysql_db
+    plugin: datapod_sqlite
+  - name: sqlite_db
+    plugin: datapod_sqlite
