--- a/datapod_generator/pubspec.yaml
+++ b/datapod_generator/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   code_builder: ^4.10.0
   dart_style: ^2.3.6
   meta: ^1.11.0
+  yaml: ^3.1.3
+  path: ^1.9.1
 
 dev_dependencies:
   lints: ^3.0.0
