--- a/datapod_core/pubspec.yaml
+++ b/datapod_core/pubspec.yaml
@@ -1,9 +1,15 @@
 name: datapod_core
-description: Core implementation logic for the Datapod ORM framework.
+description: Shared configuration and environment resolution for the Datapod ORM.
 version: 0.1.0
 homepage: https://github.com/cannon-fodder/dart_datapod
 repository: https://github.com/cannon-fodder/dart_datapod
 issue_tracker: https://github.com/cannon-fodder/dart_datapod/issues
+topics:
+  - orm
+  - database
+  - configuration
+  - persistence
+  - dart
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
