--- a/datapod_generator/pubspec.yaml
+++ b/datapod_generator/pubspec.yaml
@@ -1,9 +1,14 @@
 name: datapod_generator
-description: Code generation logic for the Datapod ORM framework.
+description: Code generation logic and build_runner integration for the Datapod ORM framework.
 version: 0.1.0
 homepage: https://github.com/cannon-fodder/dart_datapod
 repository: https://github.com/cannon-fodder/dart_datapod
 issue_tracker: https://github.com/cannon-fodder/dart_datapod/issues
+topics:
+  - orm
+  - database
+  - generator
+  - build-runner
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
