--- a/datapod_postgres/pubspec.yaml
+++ b/datapod_postgres/pubspec.yaml
@@ -4,6 +4,11 @@ version: 0.1.0
 homepage: https://github.com/cannon-fodder/dart_datapod
 repository: https://github.com/cannon-fodder/dart_datapod
 issue_tracker: https://github.com/cannon-fodder/dart_datapod/issues
+topics:
+  - orm
+  - database
+  - postgres
+  - persistence
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
