--- a/datapod_postgres/pubspec.yaml
+++ b/datapod_postgres/pubspec.yaml
@@ -1,6 +1,7 @@
 name: datapod_postgres
-description: PostgreSQL database plugin for the Datapod ORM framework.
-version: 0.1.0
+description: Postgres plugin for Datapod ORM.
+publish_to: none
+version: 0.0.1
 homepage: https://github.com/cannon-fodder/dart_datapod
 repository: https://github.com/cannon-fodder/dart_datapod
 issue_tracker: https://github.com/cannon-fodder/dart_datapod/issues
