--- a/datapod_generator/pubspec.yaml
+++ b/datapod_generator/pubspec.yaml
@@ -1,7 +1,6 @@
 name: datapod_generator
 description: Code generator for Datapod ORM classes.
-publish_to: none
-version: 0.0.1
+version: 0.1.0
 homepage: https://github.com/cannon-fodder/dart_datapod
 repository: https://github.com/cannon-fodder/dart_datapod
 issue_tracker: https://github.com/cannon-fodder/dart_datapod/issues
@@ -14,8 +13,7 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  datapod_api:
-    path: ../datapod_api
+  datapod_api: ^0.1.0
   build: ^2.4.1
   source_gen: ^1.5.0
   analyzer: ^6.4.1
