--- a/datapod_postgres/pubspec.yaml
+++ b/datapod_postgres/pubspec.yaml
@@ -1,6 +1,6 @@
 name: datapod_postgres
 description: Postgres plugin for Datapod ORM.
-publish_to: none
+
 version: 0.0.1
 homepage: https://github.com/cannon-fodder/dart_datapod
 repository: https://github.com/cannon-fodder/dart_datapod
@@ -14,12 +14,8 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  datapod_api:
-    path: ../datapod_api
-  datapod_core:
-    path: ../datapod_core
-  datapod_engine:
-    path: ../datapod_engine
+  datapod_api: ^0.1.0
+  datapod_engine: ^0.1.0
   postgres: ^3.0.0
   meta: ^1.11.0
   logging: ^1.2.0
