--- a/datapod_test/pubspec.yaml
+++ b/datapod_test/pubspec.yaml
@@ -10,19 +10,33 @@ dependencies:
   test: ^1.24.0
   datapod_api:
     path: ../datapod_api
-  datapod_core:
-    path: ../datapod_core
   datapod_postgres:
     path: ../datapod_postgres
   datapod_mysql:
     path: ../datapod_mysql
   datapod_sqlite:
     path: ../datapod_sqlite
+  datapod_engine:
+    path: ../datapod_engine
   logging: ^1.1.0
   yaml: ^3.1.1
 
 dev_dependencies:
   lints: ^2.1.0
   build_runner: ^2.4.0
+  datapod_generator:
+    path: ../datapod_generator
+
+dependency_overrides:
+  datapod_api:
+    path: ../datapod_api
+  datapod_engine:
+    path: ../datapod_engine
+  datapod_postgres:
+    path: ../datapod_postgres
+  datapod_mysql:
+    path: ../datapod_mysql
+  datapod_sqlite:
+    path: ../datapod_sqlite
   datapod_generator:
     path: ../datapod_generator
