--- a/datapod_engine/pubspec.yaml
+++ b/datapod_engine/pubspec.yaml
@@ -1,24 +1,25 @@
 name: datapod_engine
-description: Core execution engine and plugin framework for the Datapod ORM.
-version: 0.1.0
+description: Core execution engine for Datapod ORM.
+version: 0.1.1
 homepage: https://github.com/cannon-fodder/dart_datapod
 repository: https://github.com/cannon-fodder/dart_datapod
 issue_tracker: https://github.com/cannon-fodder/dart_datapod/issues
 topics:
   - orm
   - database
-  - persistence
-  - engine
-  - dart
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   datapod_api: ^0.1.0
-  yaml: ^3.1.3
-  meta: ^1.11.0
-  logging: ^1.2.0
+  yaml: ^3.1.2
+  path: ^1.9.0
 
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.0
+  mockito: ^5.4.4
+
+dependency_overrides:
+  datapod_api:
+    path: ../datapod_api
