--- a/datapod_generator/pubspec.yaml
+++ b/datapod_generator/pubspec.yaml
@@ -1,31 +1,33 @@
 name: datapod_generator
-description: Code generator for Datapod ORM classes.
-version: 0.1.0
+description: Code generator for Datapod ORM.
+version: 0.1.1
 homepage: https://github.com/cannon-fodder/dart_datapod
 repository: https://github.com/cannon-fodder/dart_datapod
 issue_tracker: https://github.com/cannon-fodder/dart_datapod/issues
 topics:
   - orm
   - database
-  - generator
-  - build-runner
+  - codegen
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  datapod_api: ^0.1.0
-  build: ^2.4.1
-  source_gen: ^1.5.0
-  analyzer: ^6.4.1
+  analyzer: ^6.0.0
+  build: ^2.4.0
   code_builder: ^4.10.0
-  dart_style: ^2.3.6
-  meta: ^1.11.0
-  yaml: ^3.1.3
-  path: ^1.9.1
-  glob: ^2.1.2
+  datapod_api: ^0.1.0
+  datapod_engine: ^0.1.0
+  glob: ^2.1.0
+  path: ^1.9.0
+  source_gen: ^1.5.0
+  yaml: ^3.1.2
 
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.0
-  build_runner: ^2.4.8
-  build_test: ^2.2.0
+
+dependency_overrides:
+  datapod_api:
+    path: ../datapod_api
+  datapod_engine:
+    path: ../datapod_engine
