--- a/datapod_sqlite/pubspec.yaml
+++ b/datapod_sqlite/pubspec.yaml
@@ -1,5 +1,5 @@
 name: datapod_sqlite
-description: SQLite database plugin for the Datapod ORM framework.
+description: SQLite plugin for Datapod ORM.
 version: 0.1.0
 homepage: https://github.com/cannon-fodder/dart_datapod
 repository: https://github.com/cannon-fodder/dart_datapod
@@ -8,17 +8,22 @@ topics:
   - orm
   - database
   - sqlite
-  - persistence
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   datapod_api: ^0.1.0
   datapod_engine: ^0.1.0
-  sqlite3: ^2.3.0
-  meta: ^1.11.0
+  sqlite3: ^2.0.0
   logging: ^1.2.0
+  path: ^1.9.0
 
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.0
+
+dependency_overrides:
+  datapod_api:
+    path: ../datapod_api
+  datapod_engine:
+    path: ../datapod_engine
