fix examples and test suite after refactoring database connection intialization

--- a/datapod_test/databases.yaml
+++ b/datapod_test/databases.yaml
@@ -5,4 +5,5 @@ databases:
     plugin: datapod_mysql
   - name: migration_test_db
     plugin: datapod_postgres
+    connection: postgres_test
     migration_connection: migration_postgres
