--- a/datapod_api/pubspec.yaml
+++ b/datapod_api/pubspec.yaml
@@ -1,6 +1,6 @@
 name: datapod_api
 description: Core annotations and base interfaces for the Datapod ORM framework.
-version: 0.2.0
+version: 0.2.1
 homepage: https://github.com/cannon-fodder/dart_datapod
 repository: https://github.com/cannon-fodder/dart_datapod
 issue_tracker: https://github.com/cannon-fodder/dart_datapod/issues
@@ -11,12 +11,12 @@ topics:
   - annotations
   - dart
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ^3.10.0
 
 dependencies:
-  meta: ^1.11.0
-  logging: ^1.2.0
+  meta: ^1.12.0
+  logging: ^1.3.0
 
 dev_dependencies:
-  lints: ^3.0.0
-  test: ^1.24.0
+  lints: ^5.0.0
+  test: ^1.25.0
