--- a/datapod_engine/pubspec.yaml
+++ b/datapod_engine/pubspec.yaml
@@ -1,6 +1,6 @@
 name: datapod_engine
 description: Core execution engine for Datapod ORM.
-version: 0.2.0
+version: 0.2.1
 homepage: https://github.com/cannon-fodder/dart_datapod
 repository: https://github.com/cannon-fodder/dart_datapod
 issue_tracker: https://github.com/cannon-fodder/dart_datapod/issues
@@ -8,7 +8,7 @@ topics:
   - orm
   - database
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ^3.10.0
 
 dependencies:
   datapod_api: ^0.2.0
@@ -16,10 +16,8 @@ dependencies:
   path: ^1.9.0
 
 dev_dependencies:
-  lints: ^3.0.0
-  test: ^1.24.0
+  lints: ^5.0.0
+  test: ^1.25.0
   mockito: ^5.4.4
 
-dependency_overrides:
-  datapod_api:
-    path: ../datapod_api
+
