--- a/datapod_generator/pubspec.yaml
+++ b/datapod_generator/pubspec.yaml
@@ -1,6 +1,6 @@
 name: datapod_generator
 description: Code generator for Datapod ORM.
-version: 0.2.0
+version: 0.2.1
 homepage: https://github.com/cannon-fodder/dart_datapod
 repository: https://github.com/cannon-fodder/dart_datapod
 issue_tracker: https://github.com/cannon-fodder/dart_datapod/issues
@@ -9,12 +9,12 @@ topics:
   - database
   - codegen
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ^3.10.0
 
 dependencies:
-  analyzer: ^6.0.0
+  analyzer: ^6.4.1
   build: ^2.4.0
-  code_builder: ^4.10.0
+  code_builder: ^4.11.0
   datapod_api: ^0.2.0
   datapod_engine: ^0.2.0
   glob: ^2.1.0
@@ -23,11 +23,7 @@ dependencies:
   yaml: ^3.1.2
 
 dev_dependencies:
-  lints: ^3.0.0
-  test: ^1.24.0
+  lints: ^5.0.0
+  test: ^1.25.0
 
-dependency_overrides:
-  datapod_api:
-    path: ../datapod_api
-  datapod_engine:
-    path: ../datapod_engine
+
