--- a/datapod_postgres/pubspec.yaml
+++ b/datapod_postgres/pubspec.yaml
@@ -1,6 +1,6 @@
 name: datapod_postgres
 description: PostgreSQL plugin for Datapod ORM.
-version: 0.2.0
+version: 0.2.1
 homepage: https://github.com/cannon-fodder/dart_datapod
 repository: https://github.com/cannon-fodder/dart_datapod
 issue_tracker: https://github.com/cannon-fodder/dart_datapod/issues
@@ -9,20 +9,16 @@ topics:
   - database
   - postgresql
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ^3.10.0
 
 dependencies:
   datapod_api: ^0.2.0
   datapod_engine: ^0.2.0
   postgres: ^3.0.0
-  logging: ^1.2.0
+  logging: ^1.3.0
 
 dev_dependencies:
-  lints: ^3.0.0
-  test: ^1.24.0
+  lints: ^5.0.0
+  test: ^1.25.0
 
-dependency_overrides:
-  datapod_api:
-    path: ../datapod_api
-  datapod_engine:
-    path: ../datapod_engine
+
